test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_with_help.rs
use clapi::macros::*;

#[command(with_help=123)]
fn app(){}

fn main(){}