test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_with_help.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_with_help.rs:3:1
  |
3 | #[command(with_help=123)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `with_usage` must be a string literal
